Fixed .task-container overflow

--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ main {
 .container {
   width: clamp(700px, 100vw, 1100px);
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .theme{
@@ -188,7 +190,6 @@ form button {
 
 .tasks-container {
   width: 100%;
-  height: calc(100vh - 16%);
   padding: 2rem 4rem;
   color: var(--text-white);
   display: flex;
@@ -196,6 +197,21 @@ form button {
   align-items: center;
   gap: 1rem;
   /* transition: all 0.3s ease-out; */
+}
+
+.tasks-container {
+  flex: 1;
+  overflow-y: auto;
+}
+
+.tasks-container::-webkit-scrollbar {
+  width: 3px;
+  background: var(--light);
+  border-radius: 10rem;
+}
+.tasks-container::-webkit-scrollbar-thumb {
+  background: var(--brown-dark);
+  border-radius: 10rem;
 }
 
 .task {
